--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,9 @@
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
-.idea
-.gradle
+.idea/
+.gradle/
+build/
 ### Eclipse ###
 .apt_generated
 .classpath
